add login and fix

--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -1,3 +1,11 @@
 {
-	"about": "About"
+	"about": "About",
+	"login": {
+		"welcome": "Welcome",
+		"login": "Login"
+	},
+	"signup": {
+		"username": "Username",
+		"password": "Password"
+	}
 }
